--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    transition: .3s ease;
 }
 
 // setup default styling
