--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,6 +8,13 @@
     transition: .3s ease;
 }
 
+
+// Hide the scroll thumb
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 // setup default styling
 :root{
 
@@ -290,4 +297,17 @@ img, video {
     }
 }
 
+.dashboard {
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+    margin: auto;
 
+    .dashboardContainer {
+        height: 95vh;
+        width: 95%;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 5px 10px rgb(194, 194, 194);
+    }
+}
