--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,10 @@
   transition: 0.3s ease;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   --primaryColor: hsl(94, 55%, 56%);
   --hoverColor: hsl(93, 75%, 76%);
@@ -253,4 +257,18 @@ img, video {
   text-decoration: underline;
   cursor: pointer;
   opacity: 1;
+}
+
+.dashboard {
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+  margin: auto;
+}
+.dashboard .dashboardContainer {
+  height: 95vh;
+  width: 95%;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 5px 10px rgb(194, 194, 194);
 }/*# sourceMappingURL=App.css.map */
