--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,7 @@
   --greyText: hsl(0, 0%, 75%);
   --bgColor: hsl(113, 11%, 85%);
   --inputColor: hsl(330, 12%, 97%);
+  --textColor: hsl(240, 1%, 48%);
   /* Font and Typography */
   --biggestFontSize: 2.5rem;
   --h1FontSize: 1.5rem;
