--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,6 +27,8 @@
     --bgColor : hsl(113, 11%, 85%);
     --inputColor : hsl(330, 12%, 97%);
 
+    --textColor: hsl(240, 1%, 48%);
+
     /* Font and Typography */
     --biggestFontSize: 2.5rem;
     --h1FontSize: 1.5rem;
