--- a/client/src/Components/Dashboard/Components/BodySection/Top Section/top.css
+++ b/client/src/Components/Dashboard/Components/BodySection/Top Section/top.css
@@ -13,9 +13,9 @@
   --h1FontSize: 1.5rem;
   --h2FontSize: 1.25rem;
   --h3FontSize: 1rem;
-  --normalFontSize: .938rem;
-  --smallFontSize: .813rem;
-  --smallestFontSize: .75rem;
+  --normalFontSize: 0.938rem;
+  --smallFontSize: 0.813rem;
+  --smallestFontSize: 0.75rem;
 }
 
 .topSection .headerSection {
@@ -103,7 +103,9 @@
   -o-object-fit: cover;
      object-fit: cover;
 }
-.topSection .cardSection .rightCard h1, .topSection .cardSection .rightCard p, .topSection .cardSection .rightCard .btn {
+.topSection .cardSection .rightCard h1,
+.topSection .cardSection .rightCard p,
+.topSection .cardSection .rightCard .btn {
   z-index: 100;
 }
 .topSection .cardSection .rightCard h1 {
@@ -133,4 +135,62 @@
 .topSection .cardSection .rightCard .buttons .transparent:hover {
   background: var(--paleGreen);
   color: var(--primaryColor);
+}
+.topSection .cardSection .leftCard {
+  flex-basis: 50%;
+}
+.topSection .cardSection .leftCard .main {
+  position: relative;
+  padding: 1rem;
+  height: 200px;
+  border-radius: 1rem;
+  justify-content: space-between;
+}
+.topSection .cardSection .leftCard .main:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: var(--paleGreen);
+  left: 0;
+  bottom: 0;
+  border-radius: 1rem;
+}
+.topSection .cardSection .leftCard .main .textDiv {
+  z-index: 100;
+}
+.topSection .cardSection .leftCard .main .textDiv h1 {
+  font-size: var(--h1FontSize);
+  padding-bottom: 1rem;
+  color: var(--blackColor);
+}
+.topSection .cardSection .leftCard .main .textDiv .flex {
+  gap: 1.5rem;
+  font-weight: 500;
+  color: var(--blackColor);
+}
+.topSection .cardSection .leftCard .main .textDiv .flex small {
+  font-size: var(--normalFontSize);
+  display: block;
+  color: var(--primaryColor);
+  font-weight: 500;
+  padding: 0.5rem 0;
+}
+.topSection .cardSection .leftCard .main .textDiv .link {
+  margin-top: 2rem;
+  cursor: pointer;
+}
+.topSection .cardSection .leftCard .main .textDiv .link:hover {
+  color: var(--primaryColor);
+}
+.topSection .cardSection .leftCard .main .textDiv .link:hover .icon {
+  transform: translateX(10px);
+  transition: 0.3s ease;
+}
+.topSection .cardSection .leftCard .main .imgDiv {
+  margin-left: 2rem;
+  transform: translateY(-1px);
+}
+.topSection .cardSection .leftCard .main .imgDiv img {
+  width: 200px;
 }/*# sourceMappingURL=top.css.map */
