--- a/client/src/Components/Dashboard/Components/BodySection/Top Section/top.scss
+++ b/client/src/Components/Dashboard/Components/BodySection/Top Section/top.scss
@@ -1,164 +1,233 @@
-:root{
+:root {
+	--primaryColor: hsl(94, 55%, 56%);
+	--hoverColor: hsl(93, 75%, 76%);
+	--paleGreen: hsl(96, 75%, 89%);
+	--whiteColor: hsl(0, 0%, 100%);
+	--blackColor: hsl(0, 0%, 18%);
+	--greyText: hsl(0, 0%, 75%);
+	--bgColor: hsl(113, 11%, 85%);
+	--inputColor: hsl(330, 12%, 97%);
 
-    --primaryColor : hsl(94, 55%, 56%);
-    --hoverColor : hsl(93, 75%, 76%);
-    --paleGreen : hsl(96, 75%, 89%);
-    --whiteColor : hsl(0, 0%, 100%);
-    --blackColor : hsl(0, 0%, 18%);
-    --greyText : hsl(0, 0%, 75%);
-    --bgColor : hsl(113, 11%, 85%);
-    --inputColor : hsl(330, 12%, 97%);
+	--textColor: hsl(240, 1%, 48%);
 
-    --textColor: hsl(240, 1%, 48%);
-
-    /* Font and Typography */
-    --biggestFontSize: 2.5rem;
-    --h1FontSize: 1.5rem;
-    --h2FontSize: 1.25rem;
-    --h3FontSize: 1rem;
-    --normalFontSize: .938rem;
-    --smallFontSize: .813rem;
-    --smallestFontSize: .75rem;
-
+	/* Font and Typography */
+	--biggestFontSize: 2.5rem;
+	--h1FontSize: 1.5rem;
+	--h2FontSize: 1.25rem;
+	--h3FontSize: 1rem;
+	--normalFontSize: 0.938rem;
+	--smallFontSize: 0.813rem;
+	--smallestFontSize: 0.75rem;
 }
 
 .topSection {
-    .headerSection {
-        justify-content: space-between;
-        
-        .title {
-            h1 {
-                font-size: var(--h1FontSize);
-                color: var(--blackColor);
-                font-weight: 700;
-            }
-    
-            p {
-                font-size: var(--normalFontSize);
-                color: var(--textColor);
-                font-weight: 500;
-            }
-        }
+	.headerSection {
+		justify-content: space-between;
 
-        .searchBar {
-            padding: 1rem 2rem;
-            background: var(--whiteColor);
-            border-radius: 5px;
-            gap: 1rem;
-            box-shadow: 0 2px 4px var(--inputColor);
+		.title {
+			h1 {
+				font-size: var(--h1FontSize);
+				color: var(--blackColor);
+				font-weight: 700;
+			}
 
-            input {
-                border: none;
-                outline: none;
-                background: none;
-            }
+			p {
+				font-size: var(--normalFontSize);
+				color: var(--textColor);
+				font-weight: 500;
+			}
+		}
 
-            .icon {
-                color: var(--textColor);
-                &:hover{
-                    color: var(--primaryColor);
-                }
-            }
-        }
+		.searchBar {
+			padding: 1rem 2rem;
+			background: var(--whiteColor);
+			border-radius: 5px;
+			gap: 1rem;
+			box-shadow: 0 2px 4px var(--inputColor);
 
-        .adminDiv {
-            gap: 1rem;
+			input {
+				border: none;
+				outline: none;
+				background: none;
+			}
 
-            .icon {
-                font-size: var(--biggestFontSize);
-                background: var(--whiteColor);
-                border-radius: 5px;
-                padding: 5px;
-                box-shadow: 0 2px 4px var(--inputColor);
-                color: var(--textColor);
-            }
+			.icon {
+				color: var(--textColor);
+				&:hover {
+					color: var(--primaryColor);
+				}
+			}
+		}
 
-            .adminImage {
-                border: 3px solid var(--whiteColor);
-                border-radius: 10px;
-                width: 2.5rem;
-                overflow: hidden;
-                box-shadow: 0 2px 4px var(--inputColor);
+		.adminDiv {
+			gap: 1rem;
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 10px;
-                }
-            }
-        }
-    }
+			.icon {
+				font-size: var(--biggestFontSize);
+				background: var(--whiteColor);
+				border-radius: 5px;
+				padding: 5px;
+				box-shadow: 0 2px 4px var(--inputColor);
+				color: var(--textColor);
+			}
 
-    .cardSection {
-        margin-top: 3rem;
-        gap: 1rem;
+			.adminImage {
+				border: 3px solid var(--whiteColor);
+				border-radius: 10px;
+				width: 2.5rem;
+				overflow: hidden;
+				box-shadow: 0 2px 4px var(--inputColor);
 
-        .rightCard {
-            position: relative;
-            flex-basis: 70%;
-            height: 200px;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
-            margin: auto;
-            padding: 2rem;
-            border-radius: 1rem;
-            overflow: hidden;
+				img {
+					width: 100%;
+					height: 100%;
+					border-radius: 10px;
+				}
+			}
+		}
+	}
 
-            .videoDiv {
-                position: absolute;
-                height: 100%;
-                width: 100%;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
+	.cardSection {
+		margin-top: 3rem;
+		gap: 1rem;
 
-                video {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
+		.rightCard {
+			position: relative;
+			flex-basis: 70%;
+			height: 200px;
+			flex-direction: column;
+			align-items: flex-start;
+			justify-content: center;
+			margin: auto;
+			padding: 2rem;
+			border-radius: 1rem;
+			overflow: hidden;
 
+			.videoDiv {
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
 
-            h1, p, .btn {
-                z-index: 100;
-            }
+				video {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
 
-            h1 {
-                font-size: var(--h1FontSize);
-                color: var(--whiteColor);
-                font-weight: 800;
-            }
+			h1,
+			p,
+			.btn {
+				z-index: 100;
+			}
 
-            p {
-                padding: 1rem;
-                color: var(--paleGreen);
-                font-weight: 500;
-            }
+			h1 {
+				font-size: var(--h1FontSize);
+				color: var(--whiteColor);
+				font-weight: 800;
+			}
 
-            .buttons {
-                gap: 1rem;
+			p {
+				padding: 1rem;
+				color: var(--paleGreen);
+				font-weight: 500;
+			}
 
-                .btn {
-                    box-shadow: none;
-                    padding: .8rem 1.5rem;
-                    color: var(--primaryColor);
-                    border: 2px solid transparent;
-                }
-                
-                .transparent {
-                    background: none;
-                    border: 2px solid var(--paleGreen);
-                    color: var(--paleGreen);
+			.buttons {
+				gap: 1rem;
 
-                    &:hover {
-                        background: var(--paleGreen);
-                        color: var(--primaryColor);
-                    }
-                }
-            }
-        }
-    }
+				.btn {
+					box-shadow: none;
+					padding: 0.8rem 1.5rem;
+					color: var(--primaryColor);
+					border: 2px solid transparent;
+				}
+
+				.transparent {
+					background: none;
+					border: 2px solid var(--paleGreen);
+					color: var(--paleGreen);
+
+					&:hover {
+						background: var(--paleGreen);
+						color: var(--primaryColor);
+					}
+				}
+			}
+		}
+
+		.leftCard {
+			flex-basis: 50%;
+
+			.main {
+				position: relative;
+				padding: 1rem;
+				height: 200px;
+				border-radius: 1rem;
+				justify-content: space-between;
+
+				&:before {
+					content: "";
+					position: absolute;
+					height: 100%;
+					width: 100%;
+					background: var(--paleGreen);
+					left: 0;
+					bottom: 0;
+					border-radius: 1rem;
+				}
+
+				.textDiv {
+					z-index: 100;
+
+					h1 {
+						font-size: var(--h1FontSize);
+						padding-bottom: 1rem;
+						color: var(--blackColor);
+					}
+
+					.flex {
+						gap: 1.5rem;
+						font-weight: 500;
+						color: var(--blackColor);
+
+						small {
+							font-size: var(--normalFontSize);
+							display: block;
+							color: var(--primaryColor);
+							font-weight: 500;
+							padding: 0.5rem 0;
+						}
+					}
+
+					.link {
+						margin-top: 2rem;
+						cursor: pointer;
+
+						&:hover {
+							color: var(--primaryColor);
+
+							.icon {
+								transform: translateX(10px);
+								transition: 0.3s ease;
+							}
+						}
+					}
+				}
+
+				.imgDiv {
+                    margin-left: 2rem;
+					transform: translateY(-1px);
+
+					img {
+						width: 200px;
+					}
+				}
+			}
+		}
+	}
 }
