--- a/client/src/Components/Dashboard/Components/BodySection/body.scss
+++ b/client/src/Components/Dashboard/Components/BodySection/body.scss
@@ -11,3 +11,11 @@
         align-items: flex-start;
     }
 }
+
+// ========== MEDUA QUERIES ========== //
+
+@media screen and (max-width: 990px) {
+    .bottom {
+        flex-direction: column;
+    }
+}
