--- a/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.css
+++ b/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.css
@@ -37,15 +37,14 @@
 .activitySection .heading .btn:hover {
   border: 1px solid var(--primaryColor);
 }
-
-.secContainer {
+.activitySection .secContainer {
   margin-top: 1rem;
 }
-.secContainer .singleCustomer {
+.activitySection .secContainer .singleCustomer {
   align-items: flex-start;
   justify-content: space-between;
 }
-.secContainer .singleCustomer img {
+.activitySection .secContainer .singleCustomer img {
   width: 40px;
   height: 40px;
   -o-object-fit: cover;
@@ -54,22 +53,28 @@
   box-shadow: 0 2px 4px var(--itemCardColor);
   margin-right: 1rem;
 }
-.secContainer .singleCustomer .customerDetails {
+.activitySection .secContainer .singleCustomer .customerDetails {
   flex: 1;
 }
-.secContainer .singleCustomer .customerDetails .name {
+.activitySection .secContainer .singleCustomer .customerDetails .name {
   font-size: var(--h3FontSize);
   font-weight: 600;
   color: var(--blackColor);
   display: block;
 }
-.secContainer .singleCustomer .customerDetails small {
+.activitySection .secContainer .singleCustomer .customerDetails small {
   font-weight: 500;
   color: var(--textColor);
   font-size: var(--smallFontSize);
 }
-.secContainer .singleCustomer .duration {
+.activitySection .secContainer .singleCustomer .duration {
   color: var(--textColor);
   font-weight: 500;
   font-size: var(--smallFontSize);
+}
+
+@media screen and (max-width: 990px) {
+  .activitySection {
+    width: 100%;
+  }
 }/*# sourceMappingURL=activity.css.map */
