--- a/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.scss
+++ b/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.scss
@@ -43,45 +43,53 @@
 			border: 1px solid var(--primaryColor);
 		}
 	}
+
+	.secContainer {
+		margin-top: 1rem;
+
+		.singleCustomer {
+			align-items: flex-start;
+			justify-content: space-between;
+
+			img {
+				width: 40px;
+				height: 40px;
+				object-fit: cover;
+				border-radius: 50%;
+				box-shadow: 0 2px 4px var(--itemCardColor);
+				margin-right: 1rem;
+			}
+
+			.customerDetails {
+				flex: 1;
+
+				.name {
+					font-size: var(--h3FontSize);
+					font-weight: 600;
+					color: var(--blackColor);
+					display: block;
+				}
+
+				small {
+					font-weight: 500;
+					color: var(--textColor);
+					font-size: var(--smallFontSize);
+				}
+			}
+
+			.duration {
+				color: var(--textColor);
+				font-weight: 500;
+				font-size: var(--smallFontSize);
+			}
+		}
+	}
 }
 
-.secContainer {
-	margin-top: 1rem;
+// ========== MEDUA QUERIES ========== //
 
-	.singleCustomer {
-		align-items: flex-start;
-		justify-content: space-between;
-
-		img {
-			width: 40px;
-			height: 40px;
-			object-fit: cover;
-			border-radius: 50%;
-			box-shadow: 0 2px 4px var(--itemCardColor);
-            margin-right: 1rem;
-		}
-
-        .customerDetails {
-            flex: 1;
-
-            .name {
-                font-size: var(--h3FontSize);
-                font-weight: 600;
-                color: var(--blackColor);
-                display: block;
-            }
-
-            small {
-                font-weight: 500;
-                color: var(--textColor);
-                font-size: var(--smallFontSize);
-            }    
-        }
-
-        .duration {
-            color: var(--textColor);
-            font-weight: 500;
-            font-size: var(--smallFontSize);
-        }
+@media screen and (max-width: 990px) {
+	.activitySection {
+		width: 100%;
 	}
 }
