--- a/client/src/Components/Dashboard/Components/BodySection/Listing Section/listing.scss
+++ b/client/src/Components/Dashboard/Components/BodySection/Listing Section/listing.scss
@@ -47,6 +47,7 @@
 
 	.secContainer {
 		width: 100%;
+		height: 100%;
 		margin: 1rem 0;
 		gap: 1rem;
 		flex-wrap: wrap;
@@ -61,91 +62,119 @@
 			flex-direction: column;
 			padding: 1rem;
 			border-radius: 10px;
-			background: var(--itemCardColor); 
+			background: var(--itemCardColor);
 
+			&:hover {
+				background: var(--itemCardHover);
+				box-shadow: 0 2px 2px var(--inputColor);
+			}
 
-            &:hover {
-                background: var(--itemCardHover);
-                box-shadow: 0 2px 2px var(--inputColor);
-            }
+			img {
+				max-width: 100px;
+			}
 
-            img {
-                max-width: 100px;
-            }
+			.icon {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				color: var(--primaryColor);
+			}
 
-            .icon {
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                color: var(--primaryColor);
-            }
-
-            h3 {
-                font-size: var(--h3FontSize);
-                color: var(--blackColor);
-                padding: 1rem 0;
-            }
+			h3 {
+				font-size: var(--h3FontSize);
+				color: var(--blackColor);
+				padding: 1rem 0;
+			}
 		}
 	}
 
-    .sellers {
-        width: 100%;
-        justify-content: space-between;
-        gap: 1rem;
-        align-items: flex-start;
+	.sellers {
+		width: 100%;
+		justify-content: space-between;
+		gap: 1rem;
+		align-items: flex-start;
 
-        .topSellers, .featuredSellers{
+		.topSellers,
+		.featuredSellers {
+			.heading {
+				padding: 1rem 0;
 
-            .heading {
-                padding: 1rem 0;
+				.btn {
+					padding: 0.5rem 1rem;
+				}
+			}
 
-                .btn {
-                    padding: .5rem 1rem;
-                }
-            }
+			.card {
+				padding: 1rem 1.5rem;
+				border-radius: 1rem;
+				background: var(--whiteColor);
+				gap: 1rem;
+				box-shadow: 0 2px 4px var(--inputColor);
 
-            .card {
-                padding: 1rem 1.5rem;
-                border-radius: 1rem;
-                background: var(--whiteColor);
-                gap: 1rem;
-                box-shadow: 0 2px 4px var(--inputColor);
+				.users {
+					padding-right: 1rem;
+					border-right: 2px solid var(--greyText);
 
-                .users {
-                    padding-right: 1rem;
-                    border-right: 2px solid var(--greyText);
+					img {
+						width: 30px;
+						height: 30px;
+						border-radius: 50%;
+						object-fit: cover;
+						border: 2px solid var(--inputColor);
+						transition: 0.5s ease;
 
-                    img {
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                        border: 2px solid var(--inputColor);
-                        transition: .5s ease;
+						&:hover {
+							transform: translateY(-10px);
+						}
+					}
+				}
 
-                        &:hover {
-                            transform: translateY(-10px);
-                        }
-                    }
-                }
+				.cardText {
+					span {
+						color: var(--blackColor);
+						font-weight: 500;
 
-                .cardText {
-                    span {
-                        color: var(--blackColor);
-                        font-weight: 500;
+						small {
+							font-weight: 400;
 
-                        small {
-                            font-weight: 400;
+							.date {
+								margin-left: 1rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
 
-                            .date {
-                                margin-left: 1rem;
-                            }
-                        }
-                    }
-                }
-            }
+// ========== MEDUA QUERIES ========== //
 
-            
-        }
-    }
+@media screen and (max-width: 990px) {
+	.listingSection {
+		.sellers {
+			.card {
+				flex-direction: column;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 918px) {
+	.listingSection {
+		.singleItem {
+			width: 200px !important;
+		}
+	}
+}
+
+@media screen and (max-width: 490px) {
+	.listingSection {
+		.sellers {
+			flex-direction: column;
+			.card {
+				flex-direction: row;
+			}
+		}
+	}
 }
