--- a/client/src/Components/Dashboard/Components/BodySection/body.css
+++ b/client/src/Components/Dashboard/Components/BodySection/body.css
@@ -9,4 +9,10 @@
   margin-top: 2rem;
   gap: 2rem;
   align-items: flex-start;
+}
+
+@media screen and (max-width: 990px) {
+  .bottom {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=body.css.map */
