--- a/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.css
+++ b/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.css
@@ -70,7 +70,7 @@
 .activitySection .secContainer .singleCustomer .duration {
   color: var(--textColor);
   font-weight: 500;
-  font-size: var(--smallFontSize);
+  font-size: var(--smallestFontSize);
 }
 
 @media screen and (max-width: 990px) {
