--- a/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.scss
+++ b/client/src/Components/Dashboard/Components/BodySection/Activity Section/activity.scss
@@ -80,7 +80,7 @@
 			.duration {
 				color: var(--textColor);
 				font-weight: 500;
-				font-size: var(--smallFontSize);
+				font-size: var(--smallestFontSize);
 			}
 		}
 	}
