--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,8 +2,8 @@
 
 * {
 	padding: 0;
-	margin: 0;
 	box-sizing: border-box;
+	margin: 0;
 	font-family: "Montserrat", sans-serif;
 	transition: 0.3s ease;
 }
@@ -11,12 +11,14 @@
 // setup default styling
 :root {
 	--primaryColor: hsl(94, 55%, 56%);
-	--hoverColor: hsl(93, 75%, 76%);
+	--hoverColor: #bdf094;
+	// --hoverColor: hsl(93, 75%, 76%);
 	--paleGreen: hsl(96, 75%, 89%);
 	--whiteColor: hsl(0, 0%, 100%);
 	--blackColor: hsl(0, 0%, 18%);
-	--greyText: hsl(0, 0%, 75%);
-	--bgColor: hsl(113, 11%, 85%);
+	--text-color: hsl(240, 1%, 48%);
+	--bgColor: hsl(220, 10%, 94%);
+	--greyText: rgb(190, 190, 190);
 	--inputColor: hsl(330, 12%, 97%);
 
 	--textColor: hsl(240, 1%, 48%);
@@ -83,6 +85,7 @@ video {
 	outline: none;
 	cursor: pointer;
 	border-radius: 8px;
+	box-shadow: 0 2px 4px var(--inputColor);
 	padding: 0.8rem 1rem;
 	color: var(--greyText);
 }
@@ -92,8 +95,8 @@ video {
 }
 
 .btn:hover {
-	color: var(--primaryColor);
 	background: var(--paleGreen);
+	color: var(--primaryColor);
 }
 
 // Pages stylings
@@ -312,7 +315,7 @@ video {
 	display: none;
 }
 
-// ========== MEDUA QUERIES ========== //
+// ========== MEDUA QUERIES FOR DASHBOARD ========== //
 
 @media screen and (max-width: 990px) {
 	.heading {
@@ -335,5 +338,126 @@ video {
 		flex-direction: column;
 		align-items: flex-start;
 		gap: 1rem;
+	}
+}
+
+// ========== MEDUA QUERIES FOR LOGIN & REGISTER COMPONENTS ========== //
+
+@media screen and (max-width: 602px) {
+	.loginPage,
+	.registerPage {
+		.container {
+			height: 100%;
+			width: 100%;
+			flex-direction: column;
+			padding: 1.5rem;
+
+			.videoDiv {
+				width: 100%;
+				.textDiv {
+					.title {
+						font-size: 20px;
+					}
+
+					p {
+						padding: 1rem;
+					}
+				}
+
+				.footerDiv {
+					.text {
+						font-size: 12px;
+					}
+
+					.btn {
+						padding: 0.4rem 1.5rem;
+					}
+				}
+			}
+
+			.formDiv {
+				gap: 1rem;
+				transform: translateY(-0.5rem);
+
+				.headerDiv {
+					padding: 1rem 0;
+
+					img {
+						width: 40px;
+					}
+
+					h3 {
+						font-size: 20px;
+					}
+				}
+
+				.form {
+					gap: 0.5rem;
+
+					.inputDiv {
+						input {
+							width: 100%;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 678px) {
+	.loginPage,
+	.registerPage {
+		.container {
+			.videoDiv {
+				.textDiv {
+					.title {
+						font-size: 25px;
+					}
+
+					p {
+						padding: 1rem;
+					}
+				}
+
+				.footerDiv {
+					.text {
+						font-size: 12px;
+					}
+
+					.btn {
+						padding: 0.8rem 1.5rem;
+					}
+				}
+			}
+
+			.formDiv {
+				.headerDiv {
+					padding: 1.5rem 0;
+
+					h3 {
+						font-size: 20px;
+					}
+				}
+
+				.form {
+					.inputDiv {
+						input {
+							width: 100%;
+							max-width: 200px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 927px) {
+	.loginPage,
+	.registerPage {
+		.container {
+			width: 85%;
+		}
 	}
 }
