--- a/client/src/Components/Dashboard/Components/BodySection/Listing Section/listing.css
+++ b/client/src/Components/Dashboard/Components/BodySection/Listing Section/listing.css
@@ -146,6 +146,6 @@
     flex-direction: column;
   }
   .listingSection .sellers .card {
-    flex-direction: row;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=listing.css.map */
