--- a/client/src/Components/Dashboard/Components/Sidebar Section/sidebar.scss
+++ b/client/src/Components/Dashboard/Components/Sidebar Section/sidebar.scss
@@ -1,11 +1,14 @@
+// setup default styling
 :root {
 	--primaryColor: hsl(94, 55%, 56%);
-	--hoverColor: hsl(93, 75%, 76%);
+	--hoverColor: #bdf094;
+    // --hoverColor: hsl(93, 75%, 76%);
 	--paleGreen: hsl(96, 75%, 89%);
 	--whiteColor: hsl(0, 0%, 100%);
 	--blackColor: hsl(0, 0%, 18%);
-	--greyText: hsl(0, 0%, 75%);
-	--bgColor: hsl(113, 11%, 85%);
+    --text-color: hsl(240, 1%, 48%);
+	--bgColor: hsl(220, 10%, 94%);
+	--greyText: rgb(190, 190, 190);
 	--inputColor: hsl(330, 12%, 97%);
 
 	--textColor: hsl(240, 1%, 48%);
@@ -22,7 +25,7 @@
 
 .sideBar {
 	background: var(--whiteColor);
-	box-shadow: 1px 0px 4px --greyText;
+	box-shadow: 1px 0px 4px var(--greyText);
 	width: 18%;
 	height: 100%;
 	gap: 3rem;
@@ -33,7 +36,7 @@
 		cursor: pointer;
 
 		img {
-			max-width: 40px;
+			max-width: 30px;
 			margin-right: 0.5rem;
 			background: var(--inputColor);
 			border-radius: 2px;
@@ -54,6 +57,20 @@
 			padding: 0 1.5rem 1.5rem;
 		}
 
+		.btnContainer {
+			padding: 0 1rem 1.5rem;
+			.btn {
+				width: 100%;
+				justify-content: center;
+				color: var(--whiteColor);
+				background-color: var(--primaryColor);
+
+				.icon {
+					margin: 0.2rem;
+				}
+			}
+		}
+
 		.menuLists {
 			.listItem {
 				// padding: 0.2rem 1.5rem;
@@ -63,7 +80,7 @@
 
 				&::before {
 					position: absolute;
-					content: '';
+					content: "";
 					height: 0%;
 					left: 0;
 					width: 5px;
@@ -75,10 +92,10 @@
 				.menuLink {
 					color: var(--greyText);
 					font-weight: 500;
-					transition: 0;
+					transition: 0s ease;
 
 					.icon {
-						margin-right: .5rem;
+						margin-right: 0.5rem;
 					}
 				}
 
@@ -89,7 +106,7 @@
 
 				&:hover::before {
 					height: 100%;
-					transition: .3s ease;
+					transition: 0.3s ease;
 				}
 			}
 		}
@@ -166,72 +183,75 @@
 	}
 }
 
-
 // ========== MEDUA QUERIES ========== //
 
 @media screen and (max-width: 820px) {
-    .sideBar {
-        padding-bottom: 2rem;
-        .sideBarCard {
-            display: none !important;
-        }
-    }
+	.sideBar {
+		padding-bottom: 2rem;
+		.sideBarCard {
+			display: none !important;
+		}
+	}
 }
 
 @media screen and (max-width: 745px) {
-    .sideBar {
-        .logoDiv {
-            text-align: center;
-            margin: auto;
-            padding: 1.5rem .5rem 0;
+	.sideBar {
+		.logoDiv {
+			text-align: center;
+			margin: auto;
+			padding: 1.5rem 0.5rem 0;
 
-            img {
-                max-width: 50px;
-                margin: 0;
-                border-radius: 10px;
-                padding: .5rem;
-            }
+			img {
+				max-width: 50px;
+				margin: 0;
+				border-radius: 10px;
+				padding: 0.5rem;
+			}
 
-            h2 {
-                display: none;
-            }
-        }
-        
-        .menuDiv , .settingsDiv{
-            .divTitle, .smallText {
-                display: none;
-            }
+			h2 {
+				display: none;
+			}
+		}
 
-            .menuLists {
-                .listItem {
-                    .menuLink {
-                        justify-content: center;
-                        .icon {
-                            font-size: var(--h1FontSize);
-                        }
-                    }
-                }
-            }
-        }
-    }
+		.menuDiv,
+		.settingsDiv {
+			.divTitle,
+			.smallText {
+				display: none;
+			}
+
+			.menuLists {
+				.listItem {
+					.menuLink {
+						justify-content: center;
+						.icon {
+							font-size: var(--h1FontSize);
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
-
 @media screen and (max-width: 390px) {
-    .sideBar {
-        .menuDiv, .settingsDiv {
-            .menuLists {
-                .listItem {
-                    padding: .2rem .5rem;
+	.sideBar {
+		.menuDiv,
+		.settingsDiv {
+			text-align: center;
+			margin: auto;
+			.menuLists {
+				.listItem {
+					padding: 0.2rem 0.5rem;
 
-                    .menuLink {
-                        justify-content: center;
-                        .icon {
-                            font-size: var(--h2FontSize);
-                        }
-                    }
-                }
-            }
-        }
-    }
+					.menuLink {
+						justify-content: center;
+						.icon {
+							font-size: var(--h2FontSize);
+						}
+					}
+				}
+			}
+		}
+	}
 }
